--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="menu-left">
                         <a href="#">Контрагентам</a>
                         <a href="#">Дизайнерам</a>
-                        <a href="#">Вакансии</a>
+                        <a href="./test.html">Вакансии</a>
                     </div>
                     <div class="menu-logo">
                         <a href="#">
