test.htmlda navigation qo'shildi

--- a/test.html
+++ b/test.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./test.css">
     <title>Document</title>
 </head>
+
 <body>
+    <nav class="navigation">
+        <div class="container">
+            <div class="menu">
+                <div class="menu-left">
+                    <a href="#">Контрагентам</a>
+                    <a href="#">Дизайнерам</a>
+                    <a href="./test.html">Вакансии</a>
+                </div>
+                <div class="menu-logo">
+                    <a href="#">
+                        <img src="./img/logo.png" alt="logo">
+                    </a>
+                </div>
+                <div class="menu-right">
+                    <div class="search">
+                        <img src="./img/icons/search.png" alt="search">
+                        <span>Поиск</span>
+                    </div>
+                    <a class="sign" href="">
+                        Вход/Регистрация
+                    </a>
+                    <div class="account">
+                        <a href="">
+                            <img src="./img/icons/account.png" alt="account">
+                        </a>
+                        <a href="">
+                            <img src="./img/icons/like.png" alt="like">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
     <h1 class="title">Salom...</h1>
 </body>
+
 </html>
